--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../public/public.css" />
-    <script src="./src/index.js" defer></script>
+    <script src="../src/index.js" defer></script>
     <title>The Mighty Calculator</title>
   </head>
-  <body class="flex justify-center items-center h-screen w-screen">
-    <div class="calc-container flex justify-center w-fit h-fit items-center bg-blue-400 flex-col rounded-3xl">
-      <h1 class="text-3xl text-white drop-shadow-lg shadow-black m-3 text-center">The Mighty Calculator</h1>
-      <div class="operations"></div>
-      <input type="text" class="calc-input p-3 m-2 rounded-xl" placeholder="0"></input>
+  <body class="flex justify-center items-center h-screen w-screen bg-blue-500">
+    <div class="calc-container flex justify-center w-fit h-fit items-center bg-blue-400 flex-col rounded-3xl border-2 shadow-neutral-700 shadow-xl">
+      <h1 class="text-3xl text-white m-3 text-center">The Mighty Calculator</h1>
+      <div class="operations flex justify-end items-center p-3 w-64 h-6 bg-white rounded-md text-right border border-blue-500 shadow-inner shadow-neutral-700"></div>
+      <input type="number" class="number-input p-3 m-2 rounded-xl text-right border border-blue-500 shadow-inner shadow-neutral-700 disabled:bg-white"" placeholder="0" disabled></input>
       <ul class="buttons flex justify-center items-center flex-wrap flex-col">
         <div class="flex">
           <li class="btn">CLEAR</li>
