--- a/src/index.html
+++ b/src/index.html
@@ -12,29 +12,29 @@
     <div class="calc-container flex justify-center w-fit h-fit items-center bg-blue-400 flex-col rounded-3xl border-2 shadow-neutral-700 shadow-xl">
       <h1 class="text-3xl text-white m-3 text-center">The Mighty Calculator</h1>
       <div class="operations flex justify-end items-center p-3 w-64 h-6 bg-white rounded-md text-right border border-blue-500 shadow-inner shadow-neutral-700"></div>
-      <input type="number" class="number-input p-3 m-2 rounded-xl text-right border border-blue-500 shadow-inner shadow-neutral-700 disabled:bg-white"" placeholder="0" disabled></input>
+      <input type="text" class="number-input p-3 m-2 rounded-xl text-right border border-blue-500 shadow-inner shadow-neutral-700 disabled:bg-white"" placeholder="0" disabled></input>
       <ul class="buttons flex justify-center items-center flex-wrap flex-col">
         <div class="flex">
-          <li class="btn">CLEAR</li>
-          <li class="btn">DEL</li>
+          <button class="btn clear-btn">CLEAR</button>
+          <button class="btn del-btn">DEL</button>
         </div>
         <div class="inputs grid grid-cols-4 mb-6">
-          <li class="btn">7</li>
-          <li class="btn">8</li>
-          <li class="btn">9</li>
-          <li class="btn">/</li>
-          <li class="btn">4</li>
-          <li class="btn">5</li>
-          <li class="btn">6</li>
-          <li class="btn">*</li>
-          <li class="btn">1</li>
-          <li class="btn">2</li>
-          <li class="btn">3</li>
-          <li class="btn">+</li>
+          <li class="btn" data-type='num'>7</li>
+          <li class="btn" data-type='num'>8</li>
+          <li class="btn" data-type='num'>9</li>
+          <li class="btn" data-type="ops">/</li>
+          <li class="btn" data-type='num'>4</li>
+          <li class="btn" data-type='num'>5</li>
+          <li class="btn" data-type='num'>6</li>
+          <li class="btn" data-type="ops">*</li>
+          <li class="btn" data-type='num'>1</li>
+          <li class="btn" data-type='num'>2</li>
+          <li class="btn" data-type='num'>3</li>
+          <li class="btn" data-type="ops">+</li>
           <li class="btn">.</li>
-          <li class="btn">0</li>
-          <li class="btn">=</li>
-          <li class="btn">-</li>
+          <li class="btn" data-type='num'>0</li>
+          <li class="btn" data-type="equal">=</li>
+          <li class="btn" data-type="ops">-</li>
         </div>
       </ul>
     </div>
